--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             <button id="runScriptButton">DOWNLOAD EQUESTRIAN HORSE FOR FREE</button>
         </div>
         <div class="image-container">
-            <!-- Use the URL of the image directly -->
-            <img src="https://steamcdn-a.akamaihd.net/steam/apps/1048830/ss_795a059ce8824ba5aef697804812d04c1e8ee453.1920x1080.jpg?t=1555126785" alt="Horse Image">
+            <img src="Horse_image.png" alt="Horse Image">
         </div>
     </div>
     <script>
